.provarCaches/00D5h000009Q6XQEA0/objects/provar__Defect__c.object
<CustomObject>
    <fields>
        <fullName>provar__Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>provar__Defect_Number__c</fullName>
        <displayFormat>DEF-{00000000}</displayFormat>
        <label>Defect Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Fixed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fixed By</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Fixed Defects</relationshipLabel>
        <relationshipName>FixedDefects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negligible</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Related_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Issue</label>
        <referenceTo>provar__Issue__c</referenceTo>
        <relationshipLabel>Related Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Reported Defects</relationshipLabel>
        <relationshipName>ReportedDefects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Root_Cause_Analysis__c</fullName>
        <label>Root Cause Analysis</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Not reproducible</fullName>
                </value>
                <value>
                    <fullName>Need more information</fullName>
                </value>
                <value>
                    <fullName>Known defect</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Ready to retest</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Project</label>
        <referenceTo>provar__Test_Project__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Timestamp__c</fullName>
        <description>Date and time when the defect occurred</description>
        <label>Reported Date</label>
        <type>DateTime</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Defect_Number__c</columns>
        <columns>provar__Description__c</columns>
        <columns>provar__Impact__c</columns>
        <columns>provar__Priority__c</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Date_Closed__c</columns>
        <columns>provar__Fixed_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>provar__Closed_Defects</fullName>
        <columns>NAME</columns>
        <columns>provar__Defect_Number__c</columns>
        <columns>provar__Description__c</columns>
        <columns>provar__Impact__c</columns>
        <columns>provar__Priority__c</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Date_Closed__c</columns>
        <columns>provar__Fixed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Status__c</field>
            <operation>equals</operation>
            <value>Rejected,Duplicate,Deferred,Not reproducible,Known defect,Fixed,Closed</value>
        </filters>
        <label>Closed Defects</label>
    </listViews>
    <listViews>
        <fullName>provar__Open_Defects</fullName>
        <columns>NAME</columns>
        <columns>provar__Defect_Number__c</columns>
        <columns>provar__Description__c</columns>
        <columns>provar__Impact__c</columns>
        <columns>provar__Priority__c</columns>
        <columns>provar__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Status__c</field>
            <operation>equals</operation>
            <value>New,Open,Assigned,Need more information,Ready to retest,Reopened</value>
        </filters>
        <label>Open Defects</label>
    </listViews>
    <nameField>
        <label>Defect Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>